--- a/conf/metastore-log4j2.properties
+++ b/conf/metastore-log4j2.properties
@@ -18,6 +18,9 @@ loggers = meta
 logger.meta.name = org.apache.hadoop.hive.metastore
 logger.meta.level = info
 
+logger.datanucleus.name = org.datanucleus
+logger.datanucleus.level = info
+
 rootLogger.level = warn
 rootLogger.appenderRefs = console, file
 rootLogger.appenderRef.console.ref = consoleLogger
