increasing debug output

--- a/conf/metastore-log4j2.properties
+++ b/conf/metastore-log4j2.properties
@@ -16,12 +16,15 @@ appender.file.layout.pattern = %d{MM/dd/yy HH:mm:ss} %p %c: %m%n
 loggers = meta
 
 logger.meta.name = org.apache.hadoop.hive.metastore
-logger.meta.level = info
+logger.meta.level = debug
 
 logger.datanucleus.name = org.datanucleus
-logger.datanucleus.level = info
+logger.datanucleus.level = debug
 
-rootLogger.level = warn
+logger.datanucleus.name = DataNucleus
+logger.datanucleus.level = debug
+
+rootLogger.level = info
 rootLogger.appenderRefs = console, file
 rootLogger.appenderRef.console.ref = consoleLogger
 rootLogger.appenderRef.file.ref = fileLogger
