--- a/conf/metastore-log4j2.properties
+++ b/conf/metastore-log4j2.properties
@@ -18,11 +18,11 @@ loggers = meta
 logger.meta.name = org.apache.hadoop.hive.metastore
 logger.meta.level = debug
 
-logger.meta.name = org.apache.hive
-logger.meta.level = debug
+logger.hive.name = org.apache.hive
+logger.hive.level = debug
 
-logger.datanucleus.name = org.datanucleus
-logger.datanucleus.level = debug
+logger.datanucleusorg.name = org.datanucleus
+logger.datanucleusorg.level = debug
 
 logger.datanucleus.name = DataNucleus
 logger.datanucleus.level = debug
